# SideBar

./: CMakeLists.txt  CMakeLists.txt.user.a4edd70  README.md  SideBar.pro  SideBar.pro.user.0e620d5  SideBar.pro.user.a4edd70  SideBar.qml  main.cpp  main.qml  main.qml.autosave  qml.qrc
RibbonUI/: CMakeLists.txt
RibbonUI/example/: CMakeLists.txt  example.cpp  example.qml
RibbonUI/example/components/: RibbonWindow.qml
RibbonUI/lib_source/qml/: RibbonBlur.qml  RibbonButton.qml  RibbonPushButton.qml  RibbonTabBar.qml
cmake/: FindQWindowKit.cmake
data/: stocks_symbols.json
magic_enum/: magic_enum.hpp
model/: DataProvider.h  Filter.cpp  Filter.h  FilterListProxy.cpp  FilterListProxy.h  FiltersList.cpp  FiltersList.h  GraphList.cpp  GraphList.h  Header.cpp  Header.h  HeaderList.cpp  HeaderList.h  HeaderListProxy.cpp  HeaderListProxy.h  Stock.cpp  Stock.h  Stocks.cpp  Stocks.h  StocksProxyModel.cpp  StocksProxyModel.h  Studies.cpp  Studies.h  Study.cpp  Study.h  TableModel.cpp  TableModel.h  TableModelProxy.cpp  TableModelProxy.h
qml/: DatePicker.qml  DateTimePicker.qml  FilterDelegate.qml  HeaderDelegate.qml  ResizableColumnHeader.qml  TimePicker.qml  ToggleCb.qml  TreeSelector.qml
qml/delegate/: DatetimeDialog.qml  TumblerDelegate.qml
ribbonbar/: ribbon.qml
